--- a/_layouts/timetable.html
+++ b/_layouts/timetable.html
@@ -31,31 +31,15 @@
           }
        </style>
     </head>
-   
     <body style="background: rgb(218, 203, 203);">
-        <div class="container-fluid" style="background: url({{site.baseurl}}/assests/images/img2.jpg) no-repeat; background-size: cover; height:100%; width: 100%; background-attachment:fixed; position: static;">
+        <div class="container-fluid" style="background: url({{site.baseurl}}/assests/images/img2.jpg) no-repeat; background-size: cover; height:100%; width: 100%; background-attachment:fixed;">
         
         {% include header.html%}       
     
-        <div class="container" >
-            <div class="col-sm-2"  >
-                <h5>Author:</h5>
-                <h3>{{page.author}}</h3>
-                <h5>Tags:</h5>
-                <ul>
-                {% for tag in page.tags%}
-                <li>{{tag}}</li>
-                {% endfor %}
-                </ul>
-                <h5>Published on:</h5>
-                <h3>{{page.date | date: '%Y, %b %d'}}</h3>
-            </div>
-            <div class="col-sm-10" >
-                <h1 style="font-family: FontAwesome; text-align: center;">{{page.title}}</h1>
-                <div style="margin-top: 2em;">
-                {{content | markdownify}}
-                </div>
-            </div>
+        <div class="container">
+            <p>
+                {{page.content}}
+            </p>
         </div>
         {% include footer.html %}
         </div>
